<resources>
    <string name="app_name">Instructor manager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="mobile_hint">Enter you mobile</string>
    <string name="email_email">somebody@example.com</string>
    <string name="email_hint">Enter you lastname</string>
    <string name="first_name_hint">Enter your firstname</string>
    <string name="last_name_hint">Enter your lastname</string>
    <string name="addressLine">Address</string>
    <string name="address_line_hint">1–10 12 Example St</string>
    <string name="suburb_hint">Enter your suburb</string>
    <string name="postcode_hint">Enter you postcode</string>
    <string name="country">Country</string>
    <string name="suburb">Suburb</string>
    <string name="postcode">Postcode</string>
    <string name="country_name">Australia</string>
    <string name="student">Student</string>
    <string name="pick_time">Pick Time</string>
    <string name="title_activity_list">ListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_lesson">Add Lesson</string>
    <string name="add_student">Add Student</string>
    <string name="favorite">Favorite</string>
    <string name="dollar_sign">$</string>
    <string name="lessons_view">Lessons</string>
    <string name="amount">Amount</string>
    <string name="number_of_lessons">Lessons #</string>
    <string name="date_purchased">Date</string>
    <string name="state">State</string>
    <string name="enter_state">Enter State</string>
    <string name="add_driving_test">Add Test</string>
    <string name="add_package">Add Package</string>
    <string name="packages">Packages</string>
    <string name="name">Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_student">Edit Student</string>
    <string name="delete_student">Delete Student</string>
    <string name="view_dashboard">View Dashboard</string>
    <string name="title_activity_lesson_maps">Map</string>
    <string name="lesson">Lesson</string>
    <string name="rating">Performance</string>
    <string name="map">Map</string>
    <string name="details">Details</string>
    <string name="new_lesson">Add Lesson</string>
</resources>
