<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/firstnameTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/firstNameEditText"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:typeface="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lastnameTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/lastnameEditText"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name_hint"
            android:inputType="text"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:typeface="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mobileTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/mobile" />

        <EditText
            android:id="@+id/mobileEditText"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mobile_hint"
            android:inputType="phone"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:typeface="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/emailEditText"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_email"
            android:inputType="textEmailAddress"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:typeface="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addressLineTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/addressLine" />

        <EditText
            android:id="@+id/addressLineEditText"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/address_line_hint"
            android:inputType="text"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:typeface="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/suburbTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/suburb" />

        <EditText
            android:id="@+id/suburbEditText"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/suburb_hint"
            android:inputType="text"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:typeface="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/postcodeTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/postcode" />

        <EditText
            android:id="@+id/postcodeEditText"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/postcode_hint"
            android:inputType="number"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:typeface="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/countryTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/country" />

        <EditText
            android:id="@+id/countryEditText"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/country_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:typeface="normal" />

    </LinearLayout>

</LinearLayout>



