<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".PlannerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plannerTitleTextView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="New Planner"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#FF6E40" />

            <Button
                android:id="@+id/savePlanner"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6E40"
                android:text="Save" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextView4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/student" />

            <TextView
                android:id="@+id/studentTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextView2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/lesson" />

            <TextView
                android:id="@+id/lessonTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextView1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Topic" />

            <EditText
                android:id="@+id/topicEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextView3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/rating" />

            <RatingBar
                android:id="@+id/performanceRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="3.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startMapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:typeface="normal" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>


