<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".PackageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/studentFormTitleTextView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="New Package"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#FF6E40" />

            <Button
                android:id="@+id/saveLesson"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6E40"
                android:text="Save" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/datePackagePurchasedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:hint="@string/date_purchased" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/studentPackageTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/student" />

            <Spinner
                android:id="@+id/studentSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Package Name" />

            <EditText
                android:id="@+id/packageNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/amountEditText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:typeface="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailTextView3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/number_of_lessons" />

            <EditText
                android:id="@+id/numberOfLessonsEditText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:typeface="normal" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>


