<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    tools:context=".StudentDetailsTopFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fullNameTopTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="New Student"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FF6E40"
            android:textSize="18sp" />

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout3"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/linearLayout2">-->


<!--        <TextView-->
<!--            android:id="@+id/TextView1"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/name" />-->

<!--        <TextView-->
<!--            android:id="@+id/fullNameTopTextView2"-->
<!--            style="@style/Base.Widget.MaterialComponents.TextInputEditText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:ems="10"-->
<!--            android:text="gddf"-->
<!--            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->

<!--    </LinearLayout>-->


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3">

        <TextView
            android:id="@+id/TextView3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/mobile" />


        <TextView
            android:id="@+id/mobileTopTextView"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout4">

        <TextView
            android:id="@+id/TextView4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <TextView
            android:id="@+id/emailTopTextView"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout5">

        <TextView
            android:id="@+id/TextView5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/addressLine" />

        <TextView
            android:id="@+id/addressTopTextView"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>



